--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BrandAI – Crie Sua Marca com Inteligência Artificial</title>
+    <link rel="icon" type="image/png" href="logo.png" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/logo.png">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/logo.png">
-<link rel="apple-touch-icon" href="assets/logo.png">
-<meta name="theme-color" content="#6a0dad">
 
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
   <style>
