Update logo source in index.html

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     <!-- LOGO ACIMA DO TÍTULO -->
     <img 
-      src="/mnt/data/Logo (4).png" 
+      src="/mnt/data/Logo.png" 
       alt="Logo"
       class="mx-auto w-32 md:w-40 mb-6 drop-shadow-2xl animate-fade-in"
     />
