--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BrandAI – Crie Sua Marca com Inteligência Artificial</title>
-    <link rel="icon" type="image/png" href="logo.png" />
+    <link rel="icon" type="image/png" href="Sparkup/Logo.png" />
   <script src="https://cdn.tailwindcss.com"></script>
 
   
