--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BrandAI – Crie Sua Marca com Inteligência Artificial</title>
-  <link rel="icon" type="image/png" href="Sparkup/Logo.png" />
+  <link rel="icon" type="image/png" href="Logo.png" />
+
   <script src="https://cdn.tailwindcss.com"></script>
 
   
@@ -164,7 +165,7 @@
     <img 
       src="Logo.png"
       alt="Logo BrandAI"
-      class="mx-auto w-32 md:w-40 mb-8 drop-shadow-xl"
+     class="mx-auto w-48 md:w-64 mb-8 drop-shadow-xl"
     />
 
     <h1 class="text-7xl md:text-8xl font-black mb-8 gradient-text animate-float animate-glow tracking-tight">
