--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <img 
       src="Logo.png"
       alt="Logo BrandAI"
-     class="mx-auto w-48 md:w-64 mb-8 drop-shadow-xl"
+      class="mx-auto w-72 md:w-96 mb-10 drop-shadow-2xl"
     />
 
     <h1 class="text-7xl md:text-8xl font-black mb-8 gradient-text animate-float animate-glow tracking-tight">
