--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BrandAI</title>
-  <link rel="icon" type="image/png" sizes="any" href="Logo.png">
+  <link rel="icon" type="image/png" href="Logo.png">
 
 
 
@@ -167,8 +167,7 @@
     <img 
       src="Logo.png"
       alt="Logo BrandAI"
-      class="mx-auto w-72 md:w-96 mb-10 drop-shadow-2xl"
-    />
+      class="mx-auto w-72 md:w-96 mb-10 drop-shadow-2xl"/>
 
     <h1 class="text-7xl md:text-8xl font-black mb-8 gradient-text animate-float animate-glow tracking-tight">
       BrandAI
