--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BrandAI</title>
-  <link rel="icon" type="image/png" href="Logo.png">
-
+<link rel="icon" type="image/png" href="favicon-256.png">
 
 
   <script src="https://cdn.tailwindcss.com"></script>
