--- a/index.html
+++ b/index.html
@@ -641,139 +641,21 @@
     }
     
     function generateBrand() {
-  // Coletando os dados do formulário
-  formData = {
-    nome: document.getElementById('nome').value,
-    segmento: document.getElementById('segmento').value,
-    palavras: document.getElementById('palavras').value,
-    cores_sim: document.getElementById('cores_sim').value,
-    cores_nao: document.getElementById('cores_nao').value,
-    tom: document.getElementById('tom').value,
-    estilo: document.getElementById('estilo').value,
-    moderno: document.getElementById('moderno').value,
-    publico: document.getElementById('publico').value,
-    objetivo: document.getElementById('objetivo').value,
-    inspiracao: document.getElementById('inspiracao').value,
-    elementos: document.getElementById('elementos').value
-  };
-  
-  // Mostrar carregamento
-  formSection.classList.add('hidden');
-  loadingScreen.classList.remove('hidden');
-
-  // Simular processamento da IA
-  setTimeout(() => {
-    loadingScreen.classList.add('hidden');
-    showResults();
-  }, 3000);  // Simula a geração dos resultados após 3 segundos
-}
-
-function showResults() {
-  document.getElementById('resultBrandName').textContent = formData.nome;
-
-  // Verificar se o campo de cores foi preenchido
-  let colors = formData.cores_sim.trim();
-  if (colors === '') {
-    // Gerar cores aleatórias se o campo estiver vazio
-    colors = generateRandomColors(5);
-  } else {
-    // Se o cliente forneceu as cores, dividir e limitar a 5
-    colors = colors.split(',').map(c => c.trim()).slice(0, 5);
-  }
-
-  // Processando as palavras-chave
-  const palavras = formData.palavras.split(',').map(p => p.trim()).slice(0, 3);
-
-  // Montando o HTML dos resultados
-  const resultsHTML = `
-    <!-- Paleta de Cores -->
-    <div class="bg-slate-700/30 border border-purple-500/20 rounded-2xl p-6 hover:scale-105 transition-transform relative overflow-hidden">
-      <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-purple-500 to-cyan-500"></div>
-      <h3 class="flex items-center gap-3 text-xl font-bold mb-6 text-purple-400">
-        <i class="fas fa-palette"></i>
-        Paleta de Cores
-      </h3>
-      <div class="flex gap-4 mb-4 flex-wrap">
-        ${colors.map(color => `
-          <div class="relative w-16 h-16 rounded-xl shadow-lg hover:scale-110 transition-transform cursor-pointer group" style="background-color: ${color}">
-            <span class="absolute bottom-0 left-0 right-0 bg-black/70 text-white text-xs p-1 text-center rounded-b-xl opacity-0 group-hover:opacity-100 transition-opacity">
-              ${color}
-            </span>
-          </div>
-        `).join('')}
-      </div>
-      <p class="text-sm text-slate-400">
-        Uma paleta ${formData.estilo} que combina ${formData.tom}, perfeita para ${formData.segmento.toLowerCase()}.
-      </p>
-    </div>
-
-    <!-- Tipografia -->
-    <div class="bg-slate-700/30 border border-purple-500/20 rounded-2xl p-6 hover:scale-105 transition-transform relative overflow-hidden">
-      <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-purple-500 to-cyan-500"></div>
-      <h3 class="flex items-center gap-3 text-xl font-bold mb-6 text-purple-400">
-        <i class="fas fa-font"></i>
-        Tipografia
-      </h3>
-      <div class="space-y-4">
-        <div class="bg-slate-700/50 rounded-xl p-4 text-center">
-          <p class="text-3xl font-black text-purple-400">${formData.nome}</p>
-          <p class="text-xs text-slate-400 mt-2">Título Principal</p>
-        </div>
-        <div class="bg-slate-700/50 rounded-xl p-4 text-center">
-          <p class="text-xl">${formData.segmento}</p>
-          <p class="text-xs text-slate-400 mt-2">Texto Corpo</p>
-        </div>
-      </div>
-      <p class="text-sm text-slate-400 mt-4">
-        Combinação perfeita entre modernidade e legibilidade para todos os materiais.
-      </p>
-    </div>
-
-    <!-- Posts Sugeridos -->
-    <div class="bg-slate-700/30 border border-purple-500/20 rounded-2xl p-6 hover:scale-105 transition-transform relative overflow-hidden">
-      <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-purple-500 to-cyan-500"></div>
-      <h3 class="flex items-center gap-3 text-xl font-bold mb-6 text-purple-400">
-        <i class="fas fa-hashtag"></i>
-        Posts Sugeridos
-      </h3>
-      <div class="grid grid-cols-3 gap-3">
-        ${palavras.map(palavra => `
-          <div class="aspect-square bg-gradient-to-br from-purple-500/20 to-cyan-500/20 rounded-xl flex items-center justify-center text-center p-3 hover:scale-105 transition-transform border border-purple-500/30">
-            <p class="text-sm font-semibold leading-tight">${palavra}<br>${formData.segmento}</p>
-          </div>
-        `).join('')}
-      </div>
-      <p class="text-sm text-slate-400 mt-4">
-        Conceitos visuais para suas redes sociais, alinhados com sua identidade ${formData.moderno}.
-      </p>
-    </div>
-
-    <!-- Legendas & Hashtags -->
-    <div class="bg-slate-700/30 border border-purple-500/20 rounded-2xl p-6 hover:scale-105 transition-transform relative overflow-hidden">
-      <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-purple-500 to-cyan-500"></div>
-      <h3 class="flex items-center gap-3 text-xl font-bold mb-6 text-purple-400">
-        <i class="fas fa-comment-alt"></i>
-        Legendas & Hashtags
-      </h3>
-      <ul class="space-y-3">
-        <li class="pl-6 py-3 border-b border-slate-600/50 relative before:content-['▸'] before:absolute before:left-0 before:text-purple-400 before:font-bold before:text-lg">
-          Inovação que transforma o futuro digital #${formData.nome.replace(/\s+/g, '')}
-        </li>
-        <li class="pl-6 py-3 border-b border-slate-600/50 relative before:content-['▸'] before:absolute before:left-0 before:text-purple-400 before:font-bold before:text-lg">
-          Soluções inteligentes para um mundo conectado #${formData.nome.replace(/\s+/g, '')}
-        </li>
-        <li class="pl-6 py-3 relative before:content-['▸'] before:absolute before:left-0 before:text-purple-400 before:font-bold before:text-lg">
-          Excelência em cada detalhe #Qualidade #${formData.segmento}
-        </li>
-      </ul>
-    </div>
-  `;
-  
-  // Inserir os resultados no DOM
-  document.getElementById('resultsContent').innerHTML = resultsHTML;
-  resultsScreen.classList.remove('hidden');
-}
-
+      // Collect form data
+      formData = {
+        nome: document.getElementById('nome').value,
+        segmento: document.getElementById('segmento').value,
+        palavras: document.getElementById('palavras').value,
+        cores_sim: document.getElementById('cores_sim').value,
+        cores_nao: document.getElementById('cores_nao').value,
+        tom: document.getElementById('tom').value,
+        estilo: document.getElementById('estilo').value,
+        moderno: document.getElementById('moderno').value,
+        publico: document.getElementById('publico').value,
+        objetivo: document.getElementById('objetivo').value,
+        inspiracao: document.getElementById('inspiracao').value,
+        elementos: document.getElementById('elementos').value
+      };
       
       // Show loading
       formSection.classList.add('hidden');
